2001-08-15  Jason Tibbitts  <tibbs@math.uh.edu>

	* t/shell.t: Fix test 15 to match changes in "password" format
	file.

	* lib/Majordomo.pm (configshow): Bugfix: in the case of a single
	scalar variable, returned $auto where we meant to return $data.

2001-08-15  Michael Yount <csf@moscow.com>

	* lib/Mj/Format.pm:  (show,who)  Bugfix:  include the third part of
	the delivery class when determining which class applies to a
	subscription.

2001-08-14  Michael Yount <csf@moscow.com>

	* bin/mj_shell:  Invoke an editor automatically when
	the faq-edit, get-edit, info-edit, or intro-edit commands
	are used.

	* bin/mj_wwwadm:  Add support for the newfaq, newinfo, newintro,
	and put commands.  Use format files with the faq, get, info, and 
	intro commands.

	* bin/mj_wwwusr:  Use format files with the faq, info, and intro
	commands.  Support the hidepost personal setting.

	* lib/Majordomo.pm:  Version number is now 0.1200108140.
	(_get, _put, _index)  Improve error checking on file names.
	(_get)  Make use of substitutions in the file_sent file.
	(_faq, _info, _intro)  Add support for the "edit" command mode.
	This will, for example, wrap the faq document in a newfaq
	command to make editing and replacing the document easier.
	(_put)  Add support for the "delete" command mode, which
	will remove files or empty directories, and the "force"
	command mode, which will recursively delete directories.
	(_archive) Add support for the "hidden" command mode, which
	displays only hidden messages (those that were posted by
	people with the "hidepost" flag set, for example).
	(archive_chunk)  Change the use of the "delete" command mode
	to avoid deleting messages from the archive that are awaiting
	delivery in a digest unless the "force" command mode is also used.  
	This allows the archive-delete-hidden command to be used to 
	clean "hidden" messages from the archive using a trigger.
	(_set)  Bugfix:  do not send a partial digest of messages